support all tosoo file versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "scoringhero"
 version = "0.1.0"
@@ -50,6 +54,9 @@ dependencies = [
     "urllib3==2.2.3",
 ]
 
+
+[project.scripts]
+scoringhero = "scoringhero:main"
 
 [dependency-groups]
 dev = [
